# megit

./: .pre-commit-config.yaml  Cargo.toml  README.md
crates/megit_cli/: Cargo.toml
crates/megit_git/: Cargo.toml
crates/megit_plot/: Cargo.toml
src/: branch.rs  commit.rs  diff.rs  lib.rs  repo.rs  stats.rs
tests/: test_repo.rs
