[package]
name = "megit_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
license = "MIT"
readme = 'README.md'


[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
plotters = "0.3.4"
git2 = { version = "0.17.1", features = ["vendored-libgit2"] }


[profile.release]
lto = true
strip = true


[[bin]]
name = "megit"
