[package]
name = "megit"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
license = "MIT"
readme = 'README.md'


[dependencies]
chrono = "0.4.24"
clap = { version = "4.3.0", features = ["derive"] }
git2 = { version = "0.17.1", features = ["vendored-libgit2"] }
plotters = "0.3.4"


[profile.release]
lto = true
strip = true


[[bin]]
name = "megit"
