[package]
name = "megit_cli"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
readme = { workspace = true }
license = { workspace = true }


[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
plotters = "0.3.4"
git2 = { version = "0.17.1", features = ["vendored-libgit2"] }


[[bin]]
name = "megit"
